Lint, format, update deps

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Encode binary data as a UTF-8 string that compresses efficiently",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "biome check src/",
+    "format": "biome check --write src/"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
   },
   "homepage": "https://github.com/jedisct1/d8code#readme",
   "devDependencies": {
-    "typescript": "^3.2.2"
+    "@biomejs/biome": "^2.3.13",
+    "@types/node": "^25.1.0",
+    "typescript": "^5.9.3"
   }
 }
